Expose public SSH through raw ingress
